# reemio-recommender-system

./: .dockerignore  .env.example  .gitignore  Dockerfile  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  README.md  alembic.ini  pyproject.toml  render.yaml
.github/ISSUE_TEMPLATE/: task.md
.github/workflows/: cd.yml  ci.yml
benchmarks/: RESULTS.md  baseline_5e515c2.json  optimized_2a49564.json
docker/: Dockerfile.api  Dockerfile.worker  docker-compose.yml
docs/: PROJECT_SUMMARY_EMAIL.md
frontend/: app.js  index.html  package-lock.json  package.json  styles.css
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: CartSidebar.tsx  Hero.tsx  Navbar.tsx  ProductCard.tsx  ProductGrid.tsx  SectionHeader.tsx  Toast.tsx
frontend/src/context/: CartContext.tsx  ToastContext.tsx  UserContext.tsx
frontend/src/hooks/: useApi.ts
frontend/src/pages/: HomePage.tsx  ProductPage.tsx
frontend/src/types/: index.ts
frontend/src/utils/: productCache.ts  sessionId.ts
k8s/base/: configmap.yaml  ingress.yaml  kustomization.yaml  namespace.yaml
k8s/base/email-worker/: deployment.yaml
k8s/base/recommendation-api/: deployment.yaml  service.yaml
k8s/base/sync-worker/: deployment.yaml
k8s/overlays/development/: kustomization.yaml
k8s/overlays/production/: hpa.yaml  kustomization.yaml
k8s/overlays/staging/: kustomization.yaml
scripts/: bench_ab.py  benchmark.py  create_eda_notebook.py  recommendation_system_eda.ipynb  seed_data.py  setup_database.sh  sync_products.py
src/email_worker/: __init__.py  main.py
src/email_worker/services/: __init__.py  mock_email_sender.py
src/email_worker/tasks/: __init__.py  back_in_stock.py  cart_abandonment.py  new_products.py  personalized_picks.py  weekly_digest.py
src/recommendation_service/: __init__.py  config.py  main.py
src/recommendation_service/api/v1/: analytics.py  benchmarks.py  evaluation.py  health.py  interactions.py  recommendations.py  router.py
src/recommendation_service/core/: __init__.py
src/recommendation_service/infrastructure/: __init__.py
src/recommendation_service/infrastructure/database/: connection.py  models.py
src/recommendation_service/infrastructure/database/migrations/: env.py
src/recommendation_service/infrastructure/database/migrations/versions/: 20260129_1914_0bcb764abf3d_initial_recommender_schema.py  20260210_0345_3364ca759416_merge_performance_indexes_and_full_text_.py  20260210_1000_a3f1c8d92e47_add_performance_indexes.py  20260210_1100_b7e2f4a19c83_add_full_text_search_support.py
src/recommendation_service/infrastructure/http/: __init__.py
src/recommendation_service/infrastructure/redis/: __init__.py
src/recommendation_service/infrastructure/vector/: __init__.py  embeddings.py
src/recommendation_service/middleware/: timing.py
src/recommendation_service/services/: __init__.py  embedding.py  evaluation.py  product_sync.py  recommendation_engine.py  recommendation_engine_v2.py  reranker.py  search.py  user_preference.py
src/shared/: constants.py
src/sync_worker/: __init__.py  main.py
src/sync_worker/services/: __init__.py
src/sync_worker/tasks/: __init__.py  sync_orders.py  sync_products.py  update_embeddings.py
tests/: __init__.py  conftest.py
tests/unit/: test_health.py  test_interactions.py
tests/unit/services/: test_cache.py  test_recommendation_engine.py  test_search.py  test_timing_middleware.py  test_user_preference.py
